Seccion inicio añadida

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>Tech solutions</title>
 </head>
 <body>
-    <h1>Bienvenidos a Tech solutions</h1>
-    <p>Innovacion y tecnologia al alcance de todos.</p>
+    <header>
+        <h1>Tech Solutions</h1>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="inicio">
+        <h2>Bienvenido a Tech Solutions</h2>
+        <p>Innovación y tecnológia al alcance de todos.</p>
+        <img src="tecnologia.webp" alt="">
+        <button>Contáctanos</button>
+    </section>
 </body>
 </html>
